feat: productize Windows AirPlay receiver